[FIX] sap.m.Popover: Firefox now correctly detects overflow and shows the scrollbar
Issue: When the Popover is opened from the sap.m.Select scrolling
doesn't work in Firefox.

Fix: Explicitly makes the wrapper grow to fill the available height in the column direction with `flex-grow: 1`

SNOW: CS20260012122079

--- a/src/sap.m/src/sap/m/themes/base/Popover.less
+++ b/src/sap.m/src/sap/m/themes/base/Popover.less
@@ -33,6 +33,10 @@
 	min-height: 0;
 }
 
+html[data-sap-ui-browser^='ff'] .sapMPopoverWrapper {
+	flex: 1;
+}
+
 .sapMPopover .sapMIBar.sapMFooter-CTX ,
 .sapMPopover.sapMPopoverWithoutFooter .sapMPopoverCont {
 	border-bottom-right-radius: 0.25rem;
